Fixed twitter link

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                     </li>
                     <li class="contact-info">
                         <img class="contact-img" src="logo-twitter.svg">
-                        <a href="https://github.com/bananaHemic/">iheartblocks</a>
+                        <a href="https://twitter.com/iheartblocks">iheartblocks</a>
                     </li>
                 </ul>
             </div>
