--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <button class="w3-bar-item w3-button tablink" onclick="openOption(event,'Unity')">Unity3D</button>
                     <button class="w3-bar-item w3-button tablink" onclick="openOption(event,'Geophysics')">Geophysics</button>
                     <button class="w3-bar-item w3-button tablink" onclick="openOption(event,'Machine Learning')">Machine Learning</button>
-                    <button class="w3-bar-item w3-button tablink" onclick="openOption(event,'Condensced Matter Physics')">Condensced Matter Physics</button>
+                    <button class="w3-bar-item w3-button tablink" onclick="openOption(event,'Condensed Matter Physics')">Condensed Matter Physics</button>
                     <button class="w3-bar-item w3-button tablink" onclick="openOption(event,'Image Signal Processing')">Image Signal Processing</button>
                 </div>
              </div>
@@ -180,7 +180,7 @@
                 <p>The first project where I used machine learning was for my research at UC Davis. This used a neural network with one hidden layer, and would help identify steel balls in images that had failed to be identified in previous processing steps.</p>
                 <p>The second time I used machine learning was a system that took two images of a person, and created a realistic avatar of that person. This worked by passing the facial images to dlib, which generated a description vector of the face. Then this dlib vector would be used as the input layer for a deep neural network in tensorflow, which would output facial morphs for the user's avatar.</div>
               <div id="Condensed Matter Physics" class="w3-container w3-border city" style="display:none">
-                <h4>Condensced Matter Physics</h4>
+                <h4>Condensed Matter Physics</h4>
                 <p>In the summer of 2014 I was an undergraduate researcher at UC Davis. My research was on identifying patterns within granular dynamics. You can imagine that if you had a jar of rice and slowly tilted the cup, eventually the rice begins to fall over. What's interesting is that the angle at which the rice begins to topple is extremely variable. Sometimes it begins to slide at 20 degrees, and another time it may begin to slide at 40 degrees. We still don't have an understanding of what contributes to the stability of granules like rice. The idea behind my research is that if we generated thousands of images of granular sliding, we could then analyze the parsed data to discover what contributes to stability. My main contribution was in improving the detection of steel balls in a glass drum. Although I think that the research was interesting, honestly it was the project that helped me decide that I don't want a career in research.</p>
               </div>
               <div id="Image Signal Processing" class="w3-container w3-border city" style="display:none">
